--- a/src/main/webapp/WEB-INF/views/forgotPasswordForm.vm
+++ b/src/main/webapp/WEB-INF/views/forgotPasswordForm.vm
@@ -1,13 +1,12 @@
-<#import "spring.ftl" as spring/>
 <html>
 	<title>Forgot Password</title>
 <body>
 <h1>Forgot Password</h1>
 <form name="forgotPassword" method="post">
 	<label>Email</label>
-	<@spring.formInput "forgotPassword.email"/>
+	#springFormInput("forgotPassword.email")
 	<input type="submit" value="SUBMIT"/>
-	<@spring.showErrors "<br/>"/>
+	#springShowErrors("")
 </form>
 </body>
 </html>
