Tried and Failed - Autocomplete for movie names. 1) JQuery UI Autocomplete doesnt work 2) Json conversion results in errors for Movie possibly due to lazy loaded dependencies, do something.

--- a/src/main/webapp/WEB-INF/views/header.vm
+++ b/src/main/webapp/WEB-INF/views/header.vm
@@ -1,1 +1,4 @@
-This is a header - add some CSS and JS please
+<link rel="stylesheet" type="text/css" href="$link.setRelative('/resources/css/main.css')"/>
+<script src="$link.setRelative('/resources/js/jquery-1.6.2.min.js')"></script>
+<script src="$link.setRelative('/resources/js/jquery-ui-1.8.14.custom.min.js')"></script>
+<script src="$link.setRelative('/resources/js/main.js')"></script>
