Restful url's returning json response, also using json ignore to remove the lazy loaded fields

--- a/src/main/webapp/WEB-INF/views/imdb/home.vm
+++ b/src/main/webapp/WEB-INF/views/imdb/home.vm
@@ -6,7 +6,12 @@
 	<body>
 		<h1>Imdb Home</h1>
 		<div>
-			<input type="text" id="autocompletesuggestedmovies"/>
+			<label>Start typing movie name: </label>
+			<input type="text" id="autoCompleteMovies"/>
+        </div>
+		<div>
+			<label>Start typing user name: </label>
+			<input type="text" id="autoCompleteUsers"/>
         </div>
 		<table>
         	#foreach($movie in $allMovies)
